# SyntheticDataPipeline

./: .gitignore  acs_dataloader.py  config.yaml  main.py  project_context.md  pyproject.toml  requirements.txt  run_pipeline.py
notebooks/: 01_data_exploration.ipynb
src/ingestion/: __init__.py  acs_income_loader.py  base_loader.py  diabetes_loader.py  home_credit_loader.py
