[project]
name = "SyntheticDataPipeline"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # Core data
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.1",

    # Synthetic data generators
    "sdv>=1.14.0",
    "ctgan>=0.10.2",

    # Differential privacy
    "opacus>=1.4.1",
    "torch>=2.3.1",

    # Evaluation
    "xgboost>=2.0.3",

    # ACSIncome dataset
    "folktables>=0.0.12",

    # Reporting & visualisation
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",

    # Utilities
    "pyyaml>=6.0.2",
    "tqdm>=4.66.4",
    "joblib>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.2.0",
]


